[package]
name = "ethereum-sentry"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
description = "Sentry that connects to Ethereum network"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
arrayvec = "0.5"
async-stream = "0.3"
async-trait = "0.1"
auto_impl = "0.4"
bytes = "1"
cidr = "0.1"
clap = "3.0.0-beta.2"
derive_more = "0.99"
devp2p = { git = "https://github.com/rust-ethereum/devp2p", features = ["discv4", "discv5", "dnsdisc"] }
discv4 = { git = "https://github.com/rust-ethereum/discv4" }
discv5 = { git = "https://github.com/vorot93/discv5", branch = "dev" }
dnsdisc = { git = "https://github.com/rust-ethereum/dnsdisc", features = ["trust-dns"] }
educe = { version = "0.4", features = ["Debug", "Default"] }
enr = { git = "https://github.com/rust-ethereum/enr", default-features = false, features = ["rust-secp256k1"] }
enum-primitive-derive = "0.2"
ethereum = { git = "https://github.com/rust-blockchain/ethereum", default-features = false }
ethereum-forkid = "0.5"
ethereum-tarpc-api = { git = "https://github.com/rust-ethereum/tarpc-api" }
ethereum-types = { version = "0.11", default-features = false }
funty = "<1.2"
futures = "0.3"
hex = "0.4"
hex-literal = "0.3"
k256 = { version = "0.7", features = ["ecdsa"] }
maplit = "1"
num-traits = "0.2"
parking_lot = "0.11"
plain_hasher = "0.2"
prost = "0.7"
reqwest = { version = "0.11", features = ["json"] }
rlp = "0.5"
rlp-derive = "0.1"
secp256k1 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
stubborn-io = "0.3"
tarpc = { version = "0.24", features = ["full"] }
task-group = { git = "https://github.com/vorot93/task-group" }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"
toml = "0.5"
tonic = { version = "0.4", features = ["tls"] }
tonic-health = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
trust-dns-resolver = "0.20"
url = { version = "2", features = ["serde"] }

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
rand = "0.8"
