[package]
name = "devp2p"
version = "0.4.0"
license = "Apache-2.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Wei Tang <hi@that.world>",
]
description = "Ethereum's devp2p protocol suite implementation in Rust."
repository = "https://github.com/rust-ethereum/devp2p"
edition = "2018"

[dependencies]
aes = "0.6"
aes-ctr = "0.6"
anyhow = "1"
arrayvec = "0.5"
async-stream = "0.3"
async-trait = "0.1"
auto_impl = "0.4"
block-modes = "0.7"
byteorder = "1"
bytes = "1"
cidr = "0.1"
derive_more = "0.99"
digest = "0.9"
discv4 = { path = "../discv4", optional = true }
discv5 = { git = "https://github.com/vorot93/discv5", branch = "dev", optional = true }
dnsdisc = { path = "../dnsdisc", default-features = false, optional = true }
educe = { version = "0.4", default-features = false, features = ["Clone", "Debug", "Default"] }
enr = { git = "https://github.com/rust-ethereum/enr", default-features = false, features = ["rust-secp256k1"] }
enum-primitive-derive = "0.2"
ethereum-types = { version = "0.11", default-features = false, features = ["std", "rlp"] }
funty = "<1.2"
futures = "0.3"
futures-intrusive = "0.4"
generic-array = "0.14"
hex = "0.4"
hmac = "0.10"
maplit = "1"
num-traits = "0.2"
parking_lot = "0.11"
rand = "0.8"
rlp = "0.5"
rlp-derive = "0.1"
secp256k1 = { version = "0.20", features = ["recovery"] }
sha2 = "0.9"
sha3 = "0.9"
snap = "1"
task-group = { git = "https://github.com/vorot93/task-group" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
hex-literal = "0.3"
sha3 = "0.9"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2"
trust-dns-resolver = "0.20"

[[example]]
name = "sentry"
required-features = ["discv4"]
