[package]
name = "dnsdisc"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
description = "Ethereum's Node Discovery via DNS (EIP-1459)"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
arrayvec = "0.5"
async-stream = "0.3"
async-trait = "0.1"
auto_impl = "0.4"
bytes = "1"
data-encoding = "2"
derive_more = "0.99"
educe = { version = "0.4", features = ["Debug"] }
enr = { git = "https://github.com/rust-ethereum/enr", default-features = false }
hex = "0.4"
maplit = "1"
sha3 = "0.9"
task-group = { git = "https://github.com/vorot93/task-group" }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
tracing = { version = "0.1", default-features = false }
tracing-futures = "0.2"
trust-dns-resolver = { version = "0.20", optional = true }

[dev-dependencies]
enr = { git = "https://github.com/rust-ethereum/enr", default-features = false, features = ["k256"] }
hex = "0.4"
k256 = { version = "0.7", features = ["ecdsa"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2"

[features]
default = ["trust-dns"]
trust-dns = ["trust-dns-resolver"]

[[example]]
name = "query_ethdisco"
required-features = ["trust-dns"]
